refactor img and desc methods. (#34)
* refactor

* refactor img and desc methods. add css to disable links in description.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -219,6 +219,12 @@ a:hover {
   padding-bottom: 30px;
 }
 
+.disable-link a, .disable-link a:hover {
+  pointer-events: none;
+  cursor: default;
+  color: inherit;
+}
+
 .day {
   font-family: 'Montserrat', sans-serif;
 }
