--- a/views/hike.erb
+++ b/views/hike.erb
@@ -13,7 +13,7 @@
   <hr>
 </div>
 <div class="col-md-8 hike-main">
-  <div class="hike-section">
+  <div class="hike-section disable-link">
     <h1>About <%= @hike.name %></h1>
     <p>
      <%= @hike.description %>
