--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,8 @@
       <a href="/">Home</a> .
       <a href="/search">Search</a> .
       <a href="/features">Features</a> .
-      <a href="/hikes/<%= rand(Hike.count) %>">Random hike</a>
+      <a href="/">Home</a> .
+      <a href="/random">Random hike</a>
     </div>
   </body>
 </html>
